--- a/scss/_toc-links.scss
+++ b/scss/_toc-links.scss
@@ -116,7 +116,7 @@
   width: 100%;
   text-align: center;
   font-size: 4rem;
-  color: $color-deep-red;
+  color: $color-pure-black;
 }
 .pieceDisplay {
   &-header {
