--- a/templates/partials/nav/sideNav.html
+++ b/templates/partials/nav/sideNav.html
@@ -11,6 +11,14 @@
     <!-- Partial subNav-chapters NJK-->
     {% include "partials/nav/subNav_chapters.html" %}
 
+    <!-- NONFICTION SF LINK -->
+    <a
+      href="index.html"
+      class="sideNav-link sideNav-static"
+      id="nonfiction-short"
+    >
+      <div class="sideNav-link--text">The Greener Side</div>
+    </a>
     <!-- FICTION LINK -->
     <div class="sideNav-link" id="shortStories">
       <div class="sideNav-link--text">Fiction</div>
@@ -29,40 +37,18 @@
     <!-- Partial subNav-nonfiction-LF NJK-->
     {% include "partials/nav/subNav_nonfiction-LF.html" %}
 
-    <!-- NONFICTION SF LINK -->
-    <div class="sideNav-link" id="nonfiction-short">
-      <div class="sideNav-link--text">Shortform Non-fiction</div>
-      <div class="sideNav-arrow" id="ddArrow-nonfiction-short">&#9660;</div>
-    </div>
-    <!-- Partial subNav-nonfiction-SF NJK-->
-    {% include "partials/nav/subNav_nonfiction-SF.html" %}
-
     <!--APHORISMS LINK -->
-    <div class="sideNav-link" id="aphorisms">
+    <a href="index.html" class="sideNav-link sideNav-static" id="aphorisms">
       <div class="sideNav-link--text">Aphorisms</div>
-      <div class="sideNav-arrow" id="ddArrow-aphorisms">&#9660;</div>
-    </div>
-    <!-- Partial subNav-aphorisms NJK-->
-    {% include "partials/nav/subNav_aphorisms.html" %}
+    </a>
 
     <!-- POETRY LINK -->
-    <div class="sideNav-link" id="poetry">
+    <a href="index.html" class="sideNav-link sideNav-static" id="poetry">
       <div class="sideNav-link--text">Poetry</div>
-      <div class="sideNav-arrow" id="ddArrow-poetry">&#9660;</div>
-    </div>
-    <!-- Partial subNav-poetry NJK-->
-    {% include "partials/nav/subNav_poetry.html" %}
-
-    <!-- ARTICLES LINK -->
-    <div class="sideNav-link" id="articles">
-      <div class="sideNav-link--text">Panagram Articles</div>
-      <div class="sideNav-arrow" id="ddArrow-articles">&#9660;</div>
-    </div>
-    <!-- Partial subNav-articles NJK-->
-    {% include "partials/nav/subNav_articles.html" %}
+    </a>
   </div>
-  <div class="sideNav-btn">
-    <button class="sideNav-btn--contact">Contact Me</button>
-  </div>
+  <a href="about.html" class="sideNav-btn">
+    <button class="sideNav-btn--contact">About</button>
+  </a>
   <h2 class="sideNav-logo">MM</h2>
 </section>
