--- a/templates/partials/nav/subNav_fiction.html
+++ b/templates/partials/nav/subNav_fiction.html
@@ -1,6 +1,6 @@
 <!------------ FICTION ------------>
 <div class="subNav pointerEvents-none" id="list-shortStories">
-  <h2 class="subNav-header">Fiction - coming soon</h2>
+  <h2 class="subNav-header">Fiction</h2>
   <a href="mirrorinthemirror.html" class="subNav-link">
     <p class="subNav-link--text">1. Mirror In the Mirror</p>
   </a>
