--- a/templates/partials/toc/toc_poetry.html
+++ b/templates/partials/toc/toc_poetry.html
@@ -5,12 +5,12 @@
     <div class="miniContainer-header--close" id="poemClose">Close</div>
     <div class="pieceLink pieceLink-poetry" id="p1">5:21</div>
     <div class="pieceLink pieceLink-poetry" id="p2">A Drug for Humans</div>
-    <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div>
+    <!-- <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div> -->
     <div class="pieceLink pieceLink-poetry" id="p4">
       How Can He Deny My Premises
     </div>
     <div class="pieceLink pieceLink-poetry" id="p5">Hunger Pangs</div>
-    <div class="pieceLink pieceLink-poetry" id="p6">Mirror Writing</div>
+    <!-- <div class="pieceLink pieceLink-poetry" id="p6">Mirror Writing</div> -->
     <div class="pieceLink pieceLink-poetry" id="p7">Often Times</div>
     <div class="pieceLink pieceLink-poetry" id="p8">One Track Life</div>
     <div class="pieceLink pieceLink-poetry" id="p9">Someday</div>
