--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -4,9 +4,9 @@
 .about {
   position: relative;
   width: 100%;
-  height: 90vh;
   display: flex;
   flex-direction: column;
+  background-color: $color-off-white;
 
   &-mainHeader {
     width: 100%;
@@ -23,7 +23,8 @@
     font-size: 4rem;
     font-weight: 300;
     text-transform: uppercase;
-    margin: 2rem 0;
+    padding: 2rem 0;
+    background-color: $color-off-white;
   }
 
   &-miniHeader {
@@ -49,6 +50,7 @@
   height: 50rem;
 
   & > img {
+    border: 1px solid $color-gray;
     border-radius: 3px;
     height: inherit;
   }
@@ -57,6 +59,7 @@
   height: 50rem;
 
   & > img {
+    border: 1px solid $color-gray;
     border-radius: 3px;
     height: inherit;
   }
@@ -66,7 +69,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  background-color: $color-off-white;
 
   & > div:not(:first-child) {
     margin-top: 2rem;
@@ -74,10 +78,11 @@
 }
 
 .about-contact {
-  padding-bottom: 2rem;
+  margin: 2rem 0;
   display: flex;
   justify-content: space-around;
   border-top: 1px solid $color-gray;
+  border-bottom: 1px solid $color-gray;
 }
 
 .contact-socials {
