--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -131,3 +131,23 @@
   line-height: 2.9rem;
   font-size: 2rem;
 }
+
+.chapter-footer {
+  height: 10vh;
+  border-top: 1px solid $color-gray;
+  display: flex;
+  align-items: center;
+  &--prologue {
+    justify-content: center;
+  }
+
+  &--standard {
+    justify-content: space-evenly;
+  }
+}
+
+.footer-link {
+  font-size: 2rem;
+  cursor: pointer;
+  color: $color-link;
+}
