--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,6 +21,7 @@ $color-gray-boxShadow: rgb(100, 100, 100);
 $color-gray-silver: rgb(146, 145, 151);
 $color-light-chocolate: rgb(84, 76, 73);
 $color-black: rgb(51, 51, 51);
+$color-pure-black: rgb(0, 0, 0);
 $color-orange: rgb(255, 145, 0);
 $color-red: rgb(252, 59, 59);
 $color-deep-red: rgb(242, 0, 0);
