Final touches to first cut 2

--- a/templates/partials/nav/subNav_nonfiction-LF.html
+++ b/templates/partials/nav/subNav_nonfiction-LF.html
@@ -2,10 +2,10 @@
 <div class="subNav pointerEvents-none" id="list-nonfiction-long">
   <h2 class="subNav-header">Longform Non-fiction</h2>
   <a href="anEssayConcerningYou.html" class="subNav-link">
-    <p class="subNav-link--text">1. An Essay Concerning You</p>
+    <p class="subNav-link--text">An Essay Concerning You</p>
   </a>
   <a href="aTheoryOfAcknowledgement.html" class="subNav-link">
-    <p class="subNav-link--text">2. A Theory of Acknowledgement</p>
+    <p class="subNav-link--text">A Theory of Acknowledgement</p>
   </a>
   <a href="anAddictMeetsRachelBloom.html" class="subNav-link">
     <p class="subNav-link--text">An Addict Meets Rachel Bloom</p>
@@ -17,18 +17,18 @@
     <p class="subNav-link--text">The Time I Met Rachel Bloom</p>
   </a>
   <a href="aStrangersStranger.html" class="subNav-link">
-    <p class="subNav-link--text">4. A Stranger's Stranger</p>
+    <p class="subNav-link--text">A Stranger's Stranger</p>
   </a>
   <a href="kingsSoConquered.html" class="subNav-link">
-    <p class="subNav-link--text">5. Kings So Conquered</p>
+    <p class="subNav-link--text">Kings So Conquered</p>
   </a>
   <a href="assumptiveCritiques.html" class="subNav-link">
-    <p class="subNav-link--text">7. Assumptive Critiques</p>
+    <p class="subNav-link--text">Assumptive Critiques</p>
   </a>
   <a href="theSonderer.html" class="subNav-link">
-    <p class="subNav-link--text">8. The Sonderer</p>
+    <p class="subNav-link--text">The Sonderer</p>
   </a>
   <a href="severed.html" class="subNav-link">
-    <p class="subNav-link--text">10. Severed</p>
+    <p class="subNav-link--text">Severed</p>
   </a>
 </div>
