--- a/templates/partials/nav/subNav_fiction.html
+++ b/templates/partials/nav/subNav_fiction.html
@@ -2,18 +2,18 @@
 <div class="subNav pointerEvents-none" id="list-shortStories">
   <h2 class="subNav-header">Fiction</h2>
   <a href="mirrorinthemirror.html" class="subNav-link">
-    <p class="subNav-link--text">1. Mirror In the Mirror</p>
+    <p class="subNav-link--text">Mirror In the Mirror</p>
   </a>
   <a href="achairtonowhere.html" class="subNav-link">
-    <div class="subNav-link--text">2. A Chair to Nowhere</div>
+    <div class="subNav-link--text">A Chair to Nowhere</div>
   </a>
   <a href="abishopswatchdog.html" class="subNav-link">
-    <div class="subNav-link--text">3. A Bishop's Watchdog</div>
+    <div class="subNav-link--text">A Bishop's Watchdog</div>
   </a>
   <a href="thedoctorsapprentice.html" class="subNav-link">
-    <div class="subNav-link--text">4. The Doctor's Apprentice</div>
+    <div class="subNav-link--text">The Doctor's Apprentice</div>
   </a>
   <a href="politiciansofthefuture.html" class="subNav-link">
-    <div class="subNav-link--text">5. Politicians of the Future</div>
+    <div class="subNav-link--text">Politicians of the Future</div>
   </a>
 </div>
