Final touches to first cut 3

--- a/templates/partials/nav/sideNav.html
+++ b/templates/partials/nav/sideNav.html
@@ -19,6 +19,8 @@
     >
       <div class="sideNav-link--text">The Greener Side</div>
     </a>
+    {% include "partials/nav/subNav_nonfiction-SF.html" %}
+
     <!-- FICTION LINK -->
     <div class="sideNav-link" id="shortStories">
       <div class="sideNav-link--text">Fiction</div>
