--- a/templates/partials/nav/subNav_nonfiction-SF.html
+++ b/templates/partials/nav/subNav_nonfiction-SF.html
@@ -1,6 +1,6 @@
 <!------------ SHORTFORM NONFICTION ------------>
 <div class="subNav pointerEvents-none" id="list-nonfiction-short">
-  <h2 class="subNav-header">Shortform Non-fiction - coming soon</h2>
+  <h2 class="subNav-header">The Greener Side</h2>
   <a href="#" class="subNav-link" id="sfM1">
     <p class="subNav-link--text">Finding Zen</p>
   </a>
