Final touches to first cut 5

--- a/templates/macros/title-macro.html
+++ b/templates/macros/title-macro.html
@@ -50,4 +50,6 @@
 <title>The Time I Met Rachel Bloom</title>
 {% endif %} {%if title == 'theWatchers' %}
 <title>The Watchers</title>
-{% endif %} {% endmacro %}
+{% endif %} {%if title == 'about' %}
+<title>About</title>
+{% endif %}{% endmacro %}
