--- a/templates/partials/nav/subNav_nonfiction-SF.html
+++ b/templates/partials/nav/subNav_nonfiction-SF.html
@@ -16,9 +16,9 @@
   <a href="#" class="subNav-link" id="sfM6">
     <p class="subNav-link--text">The Greener Side - Part 3</p>
   </a>
-  <a href="#" class="subNav-link" id="sfM3">
+  <!-- <a href="#" class="subNav-link" id="sfM3">
     <p class="subNav-link--text">Demolition Derby: HOUSE FOR SALE</p>
-  </a>
+  </a> -->
   <a href="#" class="subNav-link" id="sfM7">
     <p class="subNav-link--text">The Greener Side - Part 4</p>
   </a>
@@ -47,7 +47,7 @@
     <p class="subNav-link--text">The Day I Died Again</p>
   </a>
   <a href="#" class="subNav-link" id="sfM16">
-    <p class="subNav-link--text">And, Today</p>
+    <p class="subNav-link--text">The Wheel Is Turning</p>
   </a>
   <a href="#" class="subNav-link" id="sfM17">
     <p class="subNav-link--text">The Midwestern Root</p>
