Final cut touches 7

--- a/templates/partials/nav/subNav_nonfiction-SF.html
+++ b/templates/partials/nav/subNav_nonfiction-SF.html
@@ -16,9 +16,9 @@
   <a href="#" class="subNav-link" id="sfM6">
     <p class="subNav-link--text">The Greener Side - Part 3</p>
   </a>
-  <!-- <a href="#" class="subNav-link" id="sfM3">
+  <a href="#" class="subNav-link" id="sfM3">
     <p class="subNav-link--text">Demolition Derby: HOUSE FOR SALE</p>
-  </a> -->
+  </a>
   <a href="#" class="subNav-link" id="sfM7">
     <p class="subNav-link--text">The Greener Side - Part 4</p>
   </a>
