--- a/scss/_sideNav.scss
+++ b/scss/_sideNav.scss
@@ -37,7 +37,7 @@
     & > div:not(:first-child) {
       margin-top: 2rem;
       @include respond(break-850) {
-        margin: 0;
+        // margin: 0;
       }
     }
   }
@@ -107,6 +107,6 @@
 .sideNav-static {
   margin: 2rem 0;
   @include respond(break-850) {
-    margin: 0;
+    // margin: 0;
   }
 }
