--- a/templates/partials/toc/toc_modals.html
+++ b/templates/partials/toc/toc_modals.html
@@ -283,13 +283,13 @@
   </span>
 </div>
 
-<!-- AND, TODAY -->
-<div class="modal" id="andToday">
+<!-- THE WHEEL IS TURNING -->
+<div class="modal" id="theWheelIsTurningModal">
   <h5 class="modal-header">The Wheel Is Turning</h5>
   <div class="modal-imgContainer">
     <img
       class="modal-img"
-      src="../../../img/theGreenerSide/andToday.jpg"
+      src="../../../img/theGreenerSide/theWheelIsTurning.jpg"
       alt=""
     />
   </div>
