--- a/css/style.css
+++ b/css/style.css
@@ -3358,9 +3358,44 @@ a {
   justify-content: center;
   position: absolute;
   top: 10%;
-  left: 25%;
+  left: 15%;
   border-radius: 10px;
-  background-color: rgba(233, 233, 233, 0.5); }
+  background-color: rgba(233, 233, 233, 0.5);
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (min-width: 100em) {
+    .toc-set2--LF {
+      left: 25%; } }
 
 .toc-miniContainer {
   width: 30%;
@@ -5727,8 +5762,8 @@ a {
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
-  padding-bottom: 2rem;
-  height: 95%;
+  min-height: 95%;
+  max-height: 98%;
   border-radius: 10px;
   width: 95%;
   display: flex;
@@ -5816,7 +5851,7 @@ a {
   height: inherit; }
 
 .modal-imgContainer {
-  height: 40rem;
+  height: 35rem;
   margin: 1rem 0;
   /**============================================
    *             Mobile Small - 600
@@ -5849,21 +5884,89 @@ a {
   /**============================================
    *                Telvision/Projector > 1800
    @include respond(break-1800) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
    *=============================================**/ }
+  @media (min-width: 100em) {
+    .modal-imgContainer {
+      height: 40rem; } }
   @media (max-width: 53.125em) {
     .modal-imgContainer {
       height: 25rem; } }
 
 .modal-text {
-  font-size: 1.8rem; }
+  font-size: 1.8rem;
+  line-height: 1.5; }
 
 .modal-textContainer {
   width: 35%;
   margin: 1rem 0;
-  min-height: 20rem;
-  max-height: 35rem;
+  min-height: 25rem;
+  max-height: max-content;
   overflow-y: auto;
-  padding: 3rem 0;
+  padding: 2rem 0;
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/
   /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -6100,7 +6203,6 @@ a {
       overflow: scroll; } }
 
 #demolitionDerby .modal-textContainer {
-  height: 90%;
   overflow: auto;
   /**============================================
    *             Mobile Small - 600
