--- a/scss/_toc-modals.scss
+++ b/scss/_toc-modals.scss
@@ -8,10 +8,9 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
-  // min-height: 95%;
-  // max-height: max-content;
-  padding-bottom: 2rem;
-  height: 95%;
+  min-height: 95%;
+  max-height: 98%;
+  // height: 98%;
   border-radius: 10px;
   width: 95%;
   display: flex;
@@ -73,8 +72,11 @@
 }
 
 .modal-imgContainer {
-  height: 40rem;
+  height: 35rem;
   margin: 1rem 0;
+  @include respond(break-greater-1600) {
+    height: 40rem;
+  }
   @include respond(break-850) {
     height: 25rem;
   }
@@ -82,15 +84,18 @@
 
 .modal-text {
   font-size: 1.8rem;
+  line-height: 1.5;
 }
 
 .modal-textContainer {
   width: 35%;
   margin: 1rem 0;
-  min-height: 20rem;
-  max-height: 35rem;
+  min-height: 25rem;
+  max-height: max-content;
   overflow-y: auto;
-  padding: 3rem 0;
+  padding: 2rem 0;
+  @include respond(break-greater-1600) {
+  }
   @include respond(break-850) {
     width: 90%;
     height: 25rem;
@@ -137,7 +142,7 @@
 }
 
 #demolitionDerby .modal-textContainer {
-  height: 90%;
+  // height: 90%;
   overflow: auto;
   @include respond(break-850) {
     overflow: scroll;
