Added analytics script

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,4 +41,20 @@
     <script src="aphorisms.js"></script>
     <script src="mediaQueries.js"></script>
     <script src="tocModals.js"></script>
+    <!-- Default Statcounter code for My Writing Website http://maxamillennial.org
+-->
+<script type="text/javascript">
+var sc_project=12824808; 
+var sc_invisible=1; 
+var sc_security="005801f8"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/12824808/0/005801f8/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+  </body>
 </html>
