--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -20,9 +20,17 @@
         <p class="mainLink-text">Poetry</p>
       </div>
     </div>
+    <div class="toc-title--mobile">
+      <h1 class="toc-title--mainHead">Maxa Millennial:</h1>
+      <h2 class="toc-title--subHead">The Measured Myth</h2>
+    </div>
   </div>
 
   <div class="toc-pieceLinks">
+    <div class="toc-title fadeIn-SF1">
+      <h1 class="toc-title--mainHead">Maxa Millennial:</h1>
+      <h2 class="toc-title--subHead">The Measured Myth</h2>
+    </div>
     <!--! FICTION -->
     {% include "partials/toc/toc_fiction.html" %}
     <!--! CHAPTERS -->
