--- a/scss/_toc-containers.scss
+++ b/scss/_toc-containers.scss
@@ -26,6 +26,7 @@
 
     @include respond(break-850) {
       width: 100%;
+      position: relative;
     }
     &--container {
       display: flex;
