--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -51,6 +51,7 @@ $color-white-opaque-3: rgba(233, 233, 233, 0.75);
 $color-white-opaque-4: rgba(233, 233, 233, 0.95);
 $color-green-opaque: rgba(86, 210, 112, 0.85);
 $color-chocolate-opaque: rgba(67, 62, 60, 0.5);
+$color-chocolate-opaque-2: rgba(67, 62, 60, 0.4);
 $color-orange-opaque: rgba(255, 145, 0, 0.5);
 $color-teal-opaque: rgba(47, 193, 250, 0.4);
 $color-red-opaque: rgba(253, 114, 114, 0.9);
