Added about.html text

--- a/templates/partials/about.html
+++ b/templates/partials/about.html
@@ -42,20 +42,23 @@
   <h4 class="about-subHeader">Project Details</h4>
   <div class="about-content">
     <div class="about-text text">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-      architecto nam voluptatum voluptatem tenetur aliquam est placeat, vero
-      nostrum? Nihil nam pariatur nemo nobis commodi. Maxime corporis unde,
-      aspernatur sapiente, quo sunt enim magni, cupiditate repellat tempore esse
-      ipsam sint ad repudiandae. Maxime, ipsa. Voluptatem pariatur similique
-      omnis sit molestias.
+      "You shall become who you are." There are two paths for the philosopher to
+      take. The first is one of sterilized analysis. We ask questions, define
+      premises, make observations, and attempt to build a static picture of the
+      ideas we have. The other path is dynamic. You wake up (feeling just a
+      little different than normal). You feel sadness, happiness, fear or
+      excitement -- things we must leave outside our analysis for purposes of
+      objectivity. Maxamillennial.org is the intersecting of these paths. The
+      entire scope of the project strives to make a coherent argument while the
+      individual links are only moments that pass, feelings that can't stand up
+      to the scrutiny of argument.
     </div>
     <div class="about-text text">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-      architecto nam voluptatum voluptatem tenetur aliquam est placeat, vero
-      nostrum? Nihil nam pariatur nemo nobis commodi. Maxime corporis unde,
-      aspernatur sapiente, quo sunt enim magni, cupiditate repellat tempore esse
-      ipsam sint ad repudiandae. Maxime, ipsa. Voluptatem pariatur similique
-      omnis sit molestias.
+      In this project, all pictures were taken by the talented Maddie Mason
+      while all pieces were written by Robert Klasen. Years in the making, it
+      takes a unique connection for a project like this to come to life. One
+      day, one picture, one piece, it often felt like we were lost on the path
+      yet still traveling forwards. Maybe we were.
     </div>
   </div>
 </section>
